index and theme css ed.1

--- a/about.qmd
+++ b/about.qmd
@@ -1,7 +1,16 @@
 ---
 title: "About"
+about: 
+  template: jolla
+  image: images/profile.jpg
+  links: 
+    - text: <i class="bi bi-bluesky"></i> Bluesky
+      href: https://bsky.app/profile/vpeechatt.bsky.social
+    - text: <i class="bi bi-leaf-fill"></i>iNaturalist
+      href: https://www.inaturalist.org/people/vpeechatt
 ---
 
+I'm a third year doctoral student at the University of Nevada, Reno studying plant-insect-natural enemy interactions.
 
 ```{r}
 1 + 1
