--- a/index.qmd
+++ b/index.qmd
@@ -1,11 +1,9 @@
 ---
-title: "victoriapeechatt.github.io"
+toc: false
+format: 
+  html: 
+    include-in-header: hero-image.html
+    sidebar: false
+    anchor-sections: false
+    css: [index.css]
 ---
-
-This is a Quarto website.
-
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
-
-```{r}
-1 + 1
-```
