--- a/about.qmd
+++ b/about.qmd
@@ -3,15 +3,91 @@ title: "About"
 about: 
   template: jolla
   image: images/profile.jpg
-  links: 
-    - text: <i class="bi bi-bluesky"></i> Bluesky
-      href: https://bsky.app/profile/vpeechatt.bsky.social
-    - text: <i class="bi bi-leaf-fill"></i>iNaturalist
-      href: https://www.inaturalist.org/people/vpeechatt
+
 ---
 
-I'm a third year doctoral student at the University of Nevada, Reno studying plant-insect-natural enemy interactions.
+Hi, hello! I'm a third year doctoral student at the University of Nevada, Reno in <a href="http://www.angelasmilanich.com/" target="_blank" rel="noopener">Angela Smilanich's lab</a> studying plant-insect-natural enemy interactions. Below is an immersive version of my CV with some bonus content. If you're looking for the minimalist pdf, here it is: [CV]  
 
-```{r}
-1 + 1
-```
+<span style="white-space: nowrap"><a href="https://bsky.app/profile/vpeechatt.bsky.social" target="_blank" rel="noopener">{{< iconify simple-icons:bluesky width=20px height=20px style="color: #128ddd;" >}}</a>  <a href="https://www.inaturalist.org/people/vpeechatt" target="_blank" rel="noopener">{{< iconify academicons:inaturalist width=25px height=25px style="color: #4c8e36;" >}}</a>  </span>
+
+### Education 
+<p style="text-align:left;"><b>University of Nevada, Reno</b></br>
+Doctoral student in Ecology, Evolution, and Conservation Biology </br>2023 - present</br></br>
+Coursework: Entomology, Causality, Bayesian Hierarchical Modeling, Computational Biological Genomics, Science Communication & Writing, Chemistry of Biological Interactions
+</p>
+
+<p style="text-align:left;"><b>University of Pittsburgh</b></br>
+BA in English Writing, Minors: Computer Science, Physics, Chemistry </br>2015 - 2019</br></br>
+Coursework: Organic Chemistry, Thermal and Modern Physics, Biochemistry, 
+Intermediate Programming with Java, Discrete Structures, Algorithm and Data Structures, Ecuador Forest Ecology, Ecological Field Studies, Undergraduate Research
+</p>
+</br>
+<hr> 
+
+### Experience 
+</br>
+<p style="text-align:left;">
+<img src = "images/cityofasylum.png" width = 200px align = "left" hspace=10px vspace = 10px>
+<b>City of Asylum, Pittsburgh, PA</b></br>Volunteer, Bookseller, Administrative Assistant, Data Analyst </br>August 2016 – June 2021</br></p>
+<p style="clear: left; text-align:left;">
+I started as a volunteer in 2016 and helped with program logistics. I was later employed as a bookseller in 2017 and helped create social media posts to highlight translated literature and our writers-in-residence. In 2019 after I graduated, I was hired full-time as an administrative assistant and promoted to a data analyst position in 2020. I helped shift our usual in-person events to an online platform, and helped analyze audience metrics to apply to grants and showcase our impact to sponsors when funding was cut. </br></br>
+City of Asylum, Pittsburgh is the largest sanctuary for exiled writers and artists in the world. City of Asylum's mission is to protect and house exiled writers while also protecting and celebrating freedom of expression by hosting free, multicultural, cross-disciplinary programs at Alphabet City, Pittsburgh.
+</p>
+</br></br>
+<p style="text-align:left;">
+<img src = "images/dhiranalogo.png" width = 200px" align ="left" hspace=10px vspace = 10px>
+<b>Dhirana, Pittsburgh, PA</b> </br> Social Media and Design Committee, Sponsorship Committee, Executive Board </br>August 2015 – May 2019 </br></p>
+
+<p style="clear: left; text-align:left;"> In 2016 and 2017, I helped design the logo, merchandise, and social media for our organization to be distributed and marketed. In 2018, I helped raise $50,001 to donate to the Birmingham Free Clinic in Pittsburgh. BFC's mission is to provide healthcare to the uninsured in Pittsburgh. In 2019, I connected Dhirana with national and international companies and got sponsors to fund our mission. </br></br> Dhirana is a student-run non-profit organization whose mission is to 1) bring awareness and appreciation to Indian Classical Dance, 2) provide a platform for collegiate Indian Classical dancers to perform and compete at the national level, 3) give back to the community by donating all ticket sales to Birmingham Free Clinic. 
+</p>
+
+<hr> 
+### Awards 
+<table style="width:100%">
+  <tr>
+    <td style="width:20%">Column 1</td>
+    <td style="width:20%">Column 2</td>
+    <td style="width:60%">Column 3</td>
+  </tr>
+  <tr>
+    <td style="width:20%">content</td>
+    <td style="width:20%">content</td>
+    <td style="width:60%">content</td>
+  </tr>
+</table>
+</br>
+<hr>
+### Skills
+
+<p style="text-align:left;">
+Languages: English (native), Malayalam (native), Spanish (basic) 
+
+Programming Languages: R, Python, Latex, HTML, CSS, Javascript, C++, MATLAB, UNIX 
+
+Lab: DNA extractions, quantitative PCR, PCR gel electrophoresis, immune assays (hemocyte counts, phenoloxidase activity, melanization of filaments), chemical analyses (in training) 
+
+Practical: Wilderness Training (6/10/2024), First Aid CPR AED (1/15/2023)
+
+Arts + Hobbies: Bharatanatyam (since 2000), volleyball (since 2009), poetry (since 2011)
+
+<hr> 
+### Uses 
+</br>
+<span style="white-space: nowrap">{{< iconify logos:slack-icon width=50px height=50px title="Slack for communication" >}} {{< iconify logos:ubuntu width=50px height=50px title="Ubuntu based software on my laptop" >}} {{< iconify simple-icons:popos width=50px height=50px title="Pop_OS! operating system" >}} {{< iconify logos:linux-tux width=50px height=50px title="Linux rocks!" >}} {{< iconify simple-icons:system76 width=50px height=50px title="System76 open source laptop" >}} {{< iconify logos:android-icon width=50px height=50px title="Android smartphone" >}} <a href="https://github.com/victoriapeechatt" target="_blank" rel="noopener">{{< iconify logos:github-icon width=50px height=50px title="Github" >}}</a> {{< iconify logos:visual-studio-code width=50px height=50px title="Visual Studio IDE" >}} {{< iconify simple-icons:posit width=50px height=50px title="Posit IDE" >}} {{< iconify logos:jupyter width=50px height=50px title="Jupyter IDE(?)" >}} {{< iconify logos:obsidian-icon width=50px height=50px title="Obsidian for notetaking" >}} {{< iconify simple-icons:zotero width=50px height=50px style="color:#dd3312" title="Zotero for reference management" >}} {{< iconify simple-icons:revealdotjs width=50px height=50px title="Reveal.js for presentations" >}} {{< iconify simple-icons:quarto width=50px height=50px style="color:#5ab0d5" title="Quarto for publishing this site" >}}
+</br>
+<hr>
+
+### Side Quests 
+#### Trad Climbing Festival 
+<p style="text-align:left;">
+I joined Ripieno Studios at the Carnegie Mellon Entertainment Technology Center to make this short film. I represented Bharatanatyam, an Indian Classical Dance form that originated 2000 years ago by choreographing a segment and getting motion captured. </p></br> 
+
+#### Motion Capture for a Short Film
+<p style="text-align:left;">
+I joined Ripieno Studios at the Carnegie Mellon Entertainment Technology Center to make this short film. I represented Bharatanatyam, an Indian Classical Dance form that originated 2000 years ago by choreographing a segment and getting motion captured. </p></br> 
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/DOJ065rCiaU?si=2Ax779dSjs7py12d" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+#### Roadtrip across the continental USA 
+
+<iframe width="640" height="480" src="https://www.polarsteps.com/VictoriaPeechatt/4189822-the-adventures-of-victoria-annie-and-shadowfax/embed"></iframe>
