--- a/about.qmd
+++ b/about.qmd
@@ -25,25 +25,6 @@ Intermediate Programming with Java, Discrete Structures, Algorithm and Data Stru
 </p>
 </br>
 <hr> 
-
-### Experience 
-</br>
-<p style="text-align:left;">
-<img src = "images/cityofasylum.png" width = 200px align = "left" hspace=10px vspace = 10px>
-<b>City of Asylum, Pittsburgh, PA</b></br>Volunteer, Bookseller, Administrative Assistant, Data Analyst </br>August 2016 – June 2021</br></p>
-<p style="clear: left; text-align:left;">
-I started as a volunteer in 2016 and helped with program logistics. I was later employed as a bookseller in 2017 and helped create social media posts to highlight translated literature and our writers-in-residence. In 2019 after I graduated, I was hired full-time as an administrative assistant and promoted to a data analyst position in 2020. I helped shift our usual in-person events to an online platform, and helped analyze audience metrics to apply to grants and showcase our impact to sponsors when funding was cut. </br></br>
-City of Asylum, Pittsburgh is the largest sanctuary for exiled writers and artists in the world. City of Asylum's mission is to protect and house exiled writers while also protecting and celebrating freedom of expression by hosting free, multicultural, cross-disciplinary programs at Alphabet City, Pittsburgh.
-</p>
-</br></br>
-<p style="text-align:left;">
-<img src = "images/dhiranalogo.png" width = 200px" align ="left" hspace=10px vspace = 10px>
-<b>Dhirana, Pittsburgh, PA</b> </br> Social Media and Design Committee, Sponsorship Committee, Executive Board </br>August 2015 – May 2019 </br></p>
-
-<p style="clear: left; text-align:left;"> In 2016 and 2017, I helped design the logo, merchandise, and social media for our organization to be distributed and marketed. In 2018, I helped raise $50,001 to donate to the Birmingham Free Clinic in Pittsburgh. BFC's mission is to provide healthcare to the uninsured in Pittsburgh. In 2019, I connected Dhirana with national and international companies and got sponsors to fund our mission. </br></br> Dhirana is a student-run non-profit organization whose mission is to 1) bring awareness and appreciation to Indian Classical Dance, 2) provide a platform for collegiate Indian Classical dancers to perform and compete at the national level, 3) give back to the community by donating all ticket sales to Birmingham Free Clinic. 
-</p>
-
-<hr> 
 ### Awards 
 <table style="width:100%">
   <tr>
@@ -133,6 +114,24 @@ City of Asylum, Pittsburgh is the largest sanctuary for exiled writers and artis
   </tr>
 </table>
 </br>
+<iframe src="https://storymaps.arcgis.com/stories/a24d11b3bdb74b78902bd77b2ba59d69" width="100%" height="500px" frameborder="0" allowfullscreen allow="geolocation"></iframe>
+<hr>
+### Experience 
+</br>
+<p style="text-align:left;">
+<img src = "images/cityofasylum.png" width = 200px align = "left" hspace=10px vspace = 10px>
+<b>City of Asylum, Pittsburgh, PA</b></br>Volunteer, Bookseller, Administrative Assistant, Data Analyst </br>August 2016 – June 2021</br></p>
+<p style="clear: left; text-align:left;">
+I started as a volunteer in 2016 and helped with program logistics. I was later employed as a bookseller in 2017 and helped create social media posts to highlight translated literature and our writers-in-residence. In 2019 after I graduated, I was hired full-time as an administrative assistant and promoted to a data analyst position in 2020. I helped shift our usual in-person events to an online platform, and helped analyze audience metrics to apply to grants and showcase our impact to sponsors when funding was cut. </br></br>
+City of Asylum, Pittsburgh is the largest sanctuary for exiled writers and artists in the world. City of Asylum's mission is to protect and house exiled writers while also protecting and celebrating freedom of expression by hosting free, multicultural, cross-disciplinary programs at Alphabet City, Pittsburgh.
+</p>
+</br></br>
+<p style="text-align:left;">
+<img src = "images/dhiranalogo.png" width = 200px" align ="left" hspace=10px vspace = 10px>
+<b>Dhirana, Pittsburgh, PA</b> </br> Social Media and Design Committee, Sponsorship Committee, Executive Board </br>August 2015 – May 2019 </br></p>
+
+<p style="clear: left; text-align:left;"> In 2016 and 2017, I helped design the logo, merchandise, and social media for our organization to be distributed and marketed. In 2018, I helped raise $50,001 to donate to the Birmingham Free Clinic in Pittsburgh. BFC's mission is to provide healthcare to the uninsured in Pittsburgh. In 2019, I connected Dhirana with national and international companies and got sponsors to fund our mission. </br></br> Dhirana is a student-run non-profit organization whose mission is to 1) bring awareness and appreciation to Indian Classical Dance, 2) provide a platform for collegiate Indian Classical dancers to perform and compete at the national level, 3) give back to the community by donating all ticket sales to Birmingham Free Clinic. 
+</p>
 <hr>
 ### Skills
 
@@ -157,14 +156,14 @@ Arts + Hobbies: Bharatanatyam (since 2000), volleyball (since 2009), poetry (sin
 ### Side Quests 
 #### Climbing 
 <p style="text-align:left;">
-In September 2024, I won a scholarship to attend a trad climbing festival hosted by Flash Foxy in North Conway, New Hampshire. It was an incredible experience - I learned trad climbing and did my first multipitch with the veterans. I wrote about my experience <a href = "https://www.flashfoxy.com/scholarship-blog/victoria-peechatt-sheher" target="_blank" rel="noopener">here</a>.</p>
+In September 2024, I won a scholarship to attend a trad climbing festival hosted by Flash Foxy in North Conway, New Hampshire. It was an incredible experience - I learned trad climbing and did my first multipitch with the TradDads. I wrote about my experience <a href = "https://www.flashfoxy.com/scholarship-blog/victoria-peechatt-sheher" target="_blank" rel="noopener">here</a>.</p>
 
 <img src="images/tradfest.jpg" width=400px>
 </br>
 
 #### Volleyball 
 <p style="text-align:left;">
-Growing up, volleyball was my favorite sport to play. All through middle school, high school, and college, and in all spaces - beach, grass, court, I kept playing. Recently, my team became champions of the Reno City League A League in Spring 2023.</p>
+Growing up, volleyball was my favorite sport to play. All through middle school, high school, and college, I found all the spaces where people played (beach, grass, court) and I kept playing. Recently, my team became champions of the Reno City A League (Spring 2023).</p>
 
 <img src="images/volleyball1.jpg" width=400px>
 </br>
@@ -172,20 +171,21 @@ Growing up, volleyball was my favorite sport to play. All through middle school,
 #### Roadtrip across the continental USA 
 
 <p style="text-align:left;">
-My sister and I roadtripped across the United States in 2021 while I was moving to Reno. It was an awesome drive and we took the opportunities to see as much as we could along the way. I wrote about our trip which you can access below through PolarSteps. </p>
+My sister and I road tripped across the United States in 2021 while I was moving to Reno. It was an awesome drive and we took the opportunity to see as much as we could along the way. I wrote about our trip which you can access below through PolarSteps. </p>
 
 <iframe width="640" height="480" src="https://www.polarsteps.com/VictoriaPeechatt/4189822-the-adventures-of-victoria-annie-and-shadowfax/embed"></iframe>
 
 #### Motion Capture for a Short Film
 <p style="text-align:left;">
-I joined Ripieno Studios at the Carnegie Mellon Entertainment Technology Center to make this short film. I represented Bharatanatyam, an Indian Classical Dance form that originated 2000 years ago by choreographing a segment and getting motion captured. </p></br> 
+I joined Ripieno Studios at the Carnegie Mellon Entertainment Technology Center to make this short film. I represented Bharatanatyam, an Indian Classical Dance form that originated over 2000 years ago by choreographing a segment and getting motion captured. </p></br> 
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/DOJ065rCiaU?si=2Ax779dSjs7py12d" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 #### Dance 
 <p style="text-align:left;">
-I started learning to dance when I was four year old. Classically trained in bharatnatyam - a 2000+ year old Indian dance form, I performed on stages all over the country. In college, I was co-captain of Pitt's very own Indian Classical Dance team: Nrityamala. We won first place at a competition at George Mason University in 2017,  and audience's choice at Penn State.</p>
+Four years old until now - that's how long I've been dancing. Classically trained in bharatanatyam - a 2000+ year old Indian dance form, I performed on stages all over the country. In college, I was co-captain of Pitt's very own Indian Classical Dance team: Nrityamala. We won first place at a competition at George Mason University in 2017,  and audience's choice at Penn State.</p>
 
 <img src="images/dance1.jpg" width=400px> </br></br>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/9iTEoLo5QgU?si=2Y1-aY_HwHkyca2v" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </br>
+
