--- a/research.qmd
+++ b/research.qmd
@@ -1,5 +1,7 @@
 ---
 title: "Research"
+title-block-banner: images/glenalpine2.JPG
+title-block-banner-color: white
 listing: 
   contents: 
     - "research/*.qmd"
