--- a/teaching.qmd
+++ b/teaching.qmd
@@ -1,5 +1,7 @@
 ---
 title: "Teaching & Mentorship"
+title-block-banner: images/laselva-kids.jpg
+title-block-banner-color: white
 format: html
 ---
 
